fix: fix padding Translate to English on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -130,3 +130,7 @@ body,
     color: rgb(46, 246, 100);
   }
 }
+
+.ams-link-list__link {
+  margin-top: 1rem;
+}
